@@ -23,7 +23,7 @@
 #if USE(GRAPHICS_LAYER_WC)
 
 messages -> RemoteWCLayerTreeHost NotRefCounted {
-    Update(struct WebKit::WCUpateInfo updateInfo) -> (std::optional<WebKit::UpdateInfo> updateInfo) Async
+    Update(struct WebKit::WCUpateInfo updateInfo) -> (std::optional<WebKit::UpdateInfo> updateInfo)
 }
 
 #endif // USE(GRAPHICS_LAYER_WC)
